
(RB=420782)
Added tests for BatchCreateIdResponse
Added new mock factory and tests for BatchCreateIdResponse.

(RB=433868)
Fix bug SI-1851 by returning Http 400 error in case of key coercion error instead of Http 500.
Enhance existing RestLiRouter error testcases to always check return status.

(RB=439796)
Fix intermittent test failure in ZooKeeperChildrenDataPublisherTest.

2.2.4
-----
(RB=430630)
Let Rest.li filters modify request headers.

2.2.3
-----
(RB=425777)
Change ByteString to have slice & copySlice methods
Add new copy method to copy from a sub array

(RB=417088)
Fix a bug in AsyncPoolImpl where it fails to cancel pending create requests when it has drained out all pool waiters.

2.2.2
-----
(RB=427189)
Fix illegal argument exception thrown when a cookie header is added.

2.2.1
-----
(RB=407665)
Migrate to HttpClient 4.3.

2.2.0
-----
(RB=418083)
Create separate internal storage data structure for Cookie and Set-Cookie HTTP header. Making header storage data structure case insensitive.

2.1.2
-----
(RB=406996)
Configuration support for Rest.li request compression.

2.1.1
-----
(RB=408836)
Add unbatch logic while extracts single resonpes from an auto-batched batch response.
Add field name to RestliRequestUriSignature.toString() result.

2.1.0
-----
(RB=342503)
Making rest.li requests read-only.

(RB=405110)
Product sorted snapshot files.

(RB=405976)
Populate update status from error status.

2.0.5
-----
(RB=410397)
Adding a method on Request class that creates a string representation of the request without using security sensitive information.

2.0.4
-----
(RB=387501)
Pass the actual exception thrown by the resource (or a previous filter) to the rest.li response filters.

(RB=409087)
Fixing the wiring of parseq context for the method parameters annotated with the deprecated ParSeqContext annotation.

(RB=403572)
Added Rest.li 2.*.* release notes.

(RB=410847)
Fix deprecation Javadoc on annotations.

(RB=409497)